# pkgsrc

configurator/trunk/: ChangeLog  Makefile  configurator.spec  configurator.spec.in
kernel-picker/trunk/: Makefile  kernel-picker.spec.in  kernel_picker.1  kernel_picker.tex  kernel_picker.txt
kernel_picker/trunk/: 1.4.1.3  Config.mk  Makefile  kernel_picker.html  kernel_picker.spec  kernel_picker.spec.in
kerrighed/trunk/: config.xml
libv3m-v2m/branches/1.0/: ChangeLog  Makefile.am  ProfileXMLNode.cpp  ProfileXMLNode.h  RELEASE  TODO  VMSettings.cpp  VMSettings.h  autogen.sh  configure.ac  kvm.cpp  kvm.h  libv3m.h  libv3m.spec  qemu.cpp  qemu.h  vm.cpp  vm.h  vmm-hpc.cpp  vmware.cpp  vmware.h  xen-hvm.cpp  xen.cpp  xen.h
libv3m-v2m/branches/1.0/debian/: changelog  control  copyright  rules
libv3m-v2m/branches/1.0/doc/: Makefile  developer_manual.sgml  user_guide.sgml
libv3m-v2m/branches/1.0/etc/: v3m_config.dtd  v3m_profile.dtd  vm.conf
libv3m-v2m/branches/1.0/test/profile_data/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  configure.ac  profiles.xml  test_profile.cpp
libv3m-v2m/tools/v2m/branches/1.0/: ArgumentParser.cpp  ArgumentParser.h  ChangeLog  Makefile.am  configure.ac  debug.h  v2m.cpp
libv3m-v2m/tools/v2m/branches/1.0/debian/: changelog  control  rules
libv3m-v2m/tools/v2m/branches/1.0/rpm/: v2m.spec
libv3m-v2m/tools/v2m/branches/1.0/testing/: qemu_test.xml
libv3m-v2m/tools/v2m/trunk/: configure.ac  v2m.cpp
libv3m-v2m/tools/v2m/trunk/contrib/src/: autoboot-nodeVM.pl  get_netboot_image  smart-bootscript-client.pl
libv3m-v2m/tools/v2m/trunk/debian/: copyright
libv3m-v2m/tools/v2m/trunk/rpm/: v2m.spec
libv3m-v2m/trunk/: COPYING  ChangeLog  Makefile.am  NEWS  ProfileXMLNode.h  README  VMContainer.h  VMSettings.cpp  VMSettings.h  boot.h  doxygen_config.in  libv3m.h  libv3m.spec  qemu.h  vm.cpp  vm.h  vm_status.h  vmm-hpc.cpp  vmware.cpp  vmware.h  xen-hvm.h  xen.cpp  xen.h
netbootmgr/trunk/: AUTHORS  ChangeLog  Makefile  NetBootMgr.pm  README  SureDialog.pm  build.cfg  hostdb.test  memtest86  netbootlib.pm  netbootmgr  netbootmgr-cmd  netbootmgr.conf  netbootmgr.spec.in  netbootmgr.ui  netbootmgr.ui.h  perl-Qt.cfg  suredialog.ui  suredialog.ui.h
network-configurator/trunk/: ChangeLog  Makefile  network-configurator.spec  network-configurator.spec.in
oda/trunk/: ChangeLog  Config.mk  Makefile  oda.spec  oda.spec.in
opium/trunk/: ChangeLog  Makefile  install  postinst  ssh-oscar  ssh-oscar.sh  ssh-oscar.spec
opkg/modules-oscar/trunk/modules-default-manpath-oscar-1.0.1/: AUTHORS.OSCAR  LICENSE.OSCAR  Makefile.in  README.OSCAR  configure.ac
opkg/modules-oscar/trunk/modules-default-manpath-oscar-1.0.1/src/: Makefile.am
opkg/modules-oscar/trunk/modules-default-manpath-oscar-1.2.1/: Makefile.am  configure
opkg/modules-oscar/trunk/modules-default-manpath-oscar-1.2.1/src/: Makefile.in  default-manpath.tcl
opkg/modules-oscar/trunk/modules-oscar-1.0.5/: LICENSE.OSCAR  Makefile.am  Makefile.in  README.OSCAR  aclocal.m4  configure  configure.in
opkg/modules-oscar/trunk/modules-oscar-1.0.5/src/: 00-modules.csh  00-modules.sh  Makefile.am  Makefile.in
opkg/torque/: build_package
opkg/trunk/: Makefile  README  compile_opkgs  opkg-upload  update-apt.sh  update-yum.sh
opkg/weborm/: .htaccess  README  TODO  authors.html  create.html  create_repo.php  delete_packages.php  index.html  license.html  list_repos.php  manage.php  manage_repo.php  process_files.php  upload.html  upload.php
orm/trunk/: ChangeLog  Makefile  orm.spec  orm.spec.in
oscar-benchmarking/trunk/: Makefile  build.cfg  cbench-source.cfg  cbench.cfg  cbench.spec  cbench_sources.spec  config.xml  rpmmacros
oscar-installer/trunk/: MANIFEST.stub  Makefile.PL  README  oscar-installer  oscar-installer.spec  oscar-installer.spec.in
oscar-v/trunk/: ChangeLog  Makefile  config.xml  oscar-v.spec
oscar_udev/trunk/: ChangeLog  Makefile  oscar-udev.spec  oscar-udev.spec.in
perl-OSCAR/: perl-OSCAR.spec
rapt/trunk/: ChangeLog  Makefile  rapt  rapt.8  rapt.spec
sc3/trunk/: ChangeLog  Makefile  Subcluster.pm  sc3.spec
selector/trunk/: ChangeLog  Makefile  build.cfg  oscar-selector.spec  oscar-selector.spec.in
switcher/trunk/: AUTHORS  INSTALL  LICENSE  Makefile.am  README  configure.in
switcher/trunk/debian/: copyright
switcher/trunk/man/: Makefile.am  switcher.1
switcher/trunk/opkg/: config.xml
switcher/trunk/opkg/scripts/: api-post-configure  user_settings.pm
switcher/trunk/packager/: README
switcher/trunk/src/: Makefile.am  switcher  switcher.in  switcher.tcl  switcher.tcl.in
sync_files/: confmgr  sync_files  sync_files.conf  sync_files.spec
sync_files/trunk/: ChangeLog  Makefile  sync_files  sync_files.conf  sync_files.spec
systemconfigurator/debian/: changelog
systemconfigurator/trunk/: CHANGELOG  CREDITS  MANIFEST  META.yml  Makefile.PL  README  TODO  sc.spec  sc.spec.in
systemconfigurator_trunk/: Makefile.PL
systemconfigurator_trunk/lib/: SCConfig.pm
systemconfigurator_trunk/t/: boot_grub.t
systeminstaller-oscar/trunk/: CHANGELOG  CREDITS  INSTALL  MANIFEST  MANIFEST.stub  Makefile.PL  build.cfg  sin-oscar.spec  sin-oscar.spec.in
systeminstaller/trunk/: Makefile.PL  README  sin-02-rhel_support  sin-08-forcearch  sin-10-guifix2_api_si35x  sin-14-efi_kernel  sin-15-mdraid1  sin-27-Help-expand  sin-oscar.spec
tools/: build_distro_rpms  build_oscar_rpms  mk_rpms  mk_vcluster  svn_update  svn_update_multiple
tools/opkgc/: INSTALL  configure.ac  opkg-convert  opkgc  opkgc.conf  setup.py
tools/oscar-debian/: Makefile.template  build_oscar_debs  build_pkgsrc_debs
tools/repositories/: Makefile  README  create_build_env  debian-admin.list  oreposd  oreposd.conf  sbuildrc
xoscar/: COPYING  README  TODO  configure  xoscar.pro
xoscar/doc/: Makefile  xoscar_manual.sgml
xoscar/src/: AboutAuthorsDialog.ui  CommandBuilder.cpp  CommandBuilder.h  CommandExecutionThread.cpp  CommandExecutionThread.h  CommandTask.cpp  CommandTask.h  GenericWaitDialog.ui  Generic_WaitDialog.cpp  Generic_WaitDialog.h  Hash.cpp  Hash.h  Loading.cpp  Loading.h  (+36 more)
(+1330 files in other folders)
