# -*- makefile -*-
#
# Copyright (c) 2002 The Trustees of Indiana University.  
#                    All rights reserved.
#
# This file is part of the Env-switcher software package.  For license
# information, see the LICENSE file in the top-level directory of the
# Env-switcher source distribution.
#
# $Id: Makefile.am,v 1.3 2002/10/11 17:00:45 jsquyres Exp $
#

include $(top_srcdir)/dist/Makefile.options

man_MANS	= switcher.1

EXTRA_DIST	= $(man_MANS)
