# -*- makefile -*-
#
# Copyright (c) 2002 The Trustees of Indiana University.  
#                    All rights reserved.
#
# This file is part of the modules-oscar software package.  For
# license information, see the LICENSE file in the top-level directory
# of the modules-oscar source distribution.
#
# $Id: Makefile.am,v 1.2 2002/10/27 12:24:07 jsquyres Exp $
#

include $(top_srcdir)/dist/Makefile.options

EXTRA_DIST		= 00-modules.csh 00-modules.sh oscar.tcl
